--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -37,7 +37,7 @@
 .header_button_container {
   margin-top: 50px;
 }
-.headr_button {
+.header_button {
   width: 156px;
   height: 50px;
   background-color: #fff;
@@ -51,6 +51,10 @@
   letter-spacing: 0px;
   border-color: rgba(0, 0, 0, 0.2);
   border: none;
+}
+.header_button:hover {
+  transform: scale(1.07);
+  transition: 0.25s;
 }
 .header_subtitle_box2_img {
   width: 805px;
