--- a/src/Components/Main.css
+++ b/src/Components/Main.css
@@ -1,8 +1,12 @@
+.main_container {
+  position: relative;
+}
 .main_container_text {
   text-align: center;
 }
+
 .main_container_text_container {
-  margin-top: 160px;
+  margin-top: 140px;
 }
 .main_container_paragragh_container {
   text-align: center;
@@ -16,6 +20,11 @@
 .main_slider_container {
   display: flex;
   justify-content: center;
+  position: relative;
+  overflow-x: hidden;
+  transform: translate3d(-1220px, 0px, 0px);
+  transition: all 6s ease 0s;
+  width: 4719px;
 }
 
 .main_container_text {
@@ -27,4 +36,45 @@
 .main_item_slider_img {
   width: 394px;
   width: 297px;
+}
+.main_slider_container {
+  position: relative;
+}
+
+.prev_button {
+  width: 40px;
+  height: 40px;
+  line-height: 37px;
+  background: #fff;
+  border-radius: 50%;
+  position: absolute;
+  left: 60px;
+  z-index: 1;
+  top: 300px;
+}
+.next_button {
+  width: 40px;
+  height: 40px;
+  line-height: 37px;
+  background: #fff;
+  border-radius: 50%;
+  position: absolute;
+  right: 30px;
+  top: 300px;
+  z-index: 1;
+}
+.prev_button_content {
+  font-size: 40px;
+  line-height: 30px;
+}
+.next_button_content {
+  font-size: 40px;
+  line-height: 30px;
+}
+
+.loading_text {
+  width: 100px;
+  height: 100px;
+  font-size: 20px;
+  font-weight: bold;
 }
